21 Apr 2005 mipsator
 * modified pmkscan to use parse_lang.
 * improved the -m option of pmkscan.
 * fixed/improved stuff in prseng.
 * updated plang test.

17 Apr 2005 mipsator
 * updated parse_lang in sync with latest changes.

13 Apr 2005 mipsator
 * added missing parts for pmk and pmksetup, tree should be still broken
   due to the missing parts i did not committed yet.
 * added missing parts for pkgconfig object.

12 Apr 2005 mipsator
 * updated parse.c to use prseng functions.
 * added detection of C99 and C89 compilers.

07 Apr 2005 mipsator
 * imported the more than experimental c file parsing engine. This is still
   work in progress but is largely useable.
 * imported tests/plang_test.c to test c file parser.

06 Apr 2005 mipsator
 * imported new main engine of pmkscan to permit generation of pmkfile
   and makefile templates. This does not include the new file parser.

05 Apr 2005 mipsator
 * import of prseng sources, a set of functions to manage a parsing
   buffer. It will be used in pmkscan and later by the pmk parser.

# snapshot 0.9.2-s1

23 Mar 2005 mipsator
 * added option checking for compiler data.
 * improved option checking so we can specify required options and
   allow any optional options. Or having no required options but a
   specified bunch of optional options.

20 Mar 2005 mipsator
 * improved the parser to allow type checking of options.

17 Mar 2005 mreindl
 * pmkcfg.sh: fall back to 'cc -E' when cpp isn't available and obey $CPP when
   set.

13 Mar 2005 mipsator
 * added option checking in parser.
 * comment cosmetics in parser.

25 Feb 2005 mipsator
 * implemented backup options in pmkinstall.

05 Feb 2005 mipsator
 * fragmented pmkinstall main loop into sub functions.

# PMK 0.9.2 release

29 Jan 2005 mipsator
 * fixed the -v option of pmksetup.
 * fixed pmksetup behavior when the user has not the required privileges.
 * moved the configuration directory checking earlier in the program
   execution.

# PMK 0.9.1 release
